--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "private": true,
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.5.0"
   },
   "devDependencies": {
     "@nrwl/eslint-plugin-nx": "15.3.3",
@@ -39,6 +40,7 @@
     "react-test-renderer": "18.2.0",
     "typescript": "~4.8.2",
     "vite": "^3.0.5",
+    "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.6.0",
     "vite-tsconfig-paths": "^4.0.1",
     "vitest": "^0.25.1"
