--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "private": true,
   "dependencies": {
+    "core-js": "^3.6.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.5.0"
+    "react-router-dom": "^6.5.0",
+    "regenerator-runtime": "0.13.7",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
     "@nrwl/eslint-plugin-nx": "15.3.3",
     "@nrwl/linter": "15.3.3",
     "@nrwl/react": "15.3.3",
@@ -35,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-tailwindcss": "^3.7.1",
     "jsdom": "~20.0.3",
     "nx": "15.3.3",
     "postcss": "8.4.19",
