--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "private": true,
   "dependencies": {
+    "@next/font": "^13.1.6",
     "core-js": "^3.27.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.6.2",
     "regenerator-runtime": "0.13.11",
-    "tslib": "^2.4.1"
+    "tslib": "^2.4.1",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
@@ -45,7 +47,7 @@
     "postcss": "8.4.21",
     "prettier": "^2.8.2",
     "react-test-renderer": "18.2.0",
-    "tailwindcss": "3.2.4",
+    "tailwindcss": "^3.2.4",
     "typescript": "~4.9.4",
     "vite": "^4.0.4",
     "vite-plugin-dts": "~1.7.1",
