--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@next/font": "^13.1.6",
+    "@tanstack/react-query": "^4.24.6",
     "core-js": "^3.27.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
