--- a/package.json
+++ b/package.json
@@ -11,27 +11,29 @@
   "dependencies": {
     "@next/font": "^13.1.6",
     "@tanstack/react-query": "^4.24.6",
+    "classnames": "^2.3.2",
     "core-js": "^3.27.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.6.2",
     "regenerator-runtime": "0.13.11",
     "tslib": "^2.4.1",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
-    "@nrwl/eslint-plugin-nx": "15.4.5",
-    "@nrwl/linter": "15.4.5",
-    "@nrwl/react": "15.4.5",
-    "@nrwl/vite": "15.4.5",
-    "@nrwl/workspace": "15.4.5",
+    "@nx/eslint-plugin": "16.0.3",
+    "@nx/linter": "16.0.3",
+    "@nx/react": "16.0.3",
+    "@nx/vite": "16.0.3",
+    "@nx/workspace": "16.0.3",
     "@testing-library/react": "13.4.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@typescript-eslint/eslint-plugin": "5.59.2",
+    "@typescript-eslint/parser": "5.59.2",
     "@vitejs/plugin-react": "^3.0.1",
     "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
@@ -44,7 +46,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-tailwindcss": "^3.8.0",
     "jsdom": "~21.0.0",
-    "nx": "15.4.5",
+    "nx": "16.0.3",
     "postcss": "8.4.21",
     "prettier": "^2.8.2",
     "react-test-renderer": "18.2.0",
