--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^4.24.6",
     "classnames": "^2.3.2",
     "core-js": "^3.27.1",
+    "immer": "^10.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.6.2",
